# mdr

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-10-mdr-implementation.md
docs/superpowers/specs/: 2026-04-10-mdr-design.md
src/: app.rs  config.rs  error.rs  fs.rs  keys.rs  main.rs  markdown.rs  watcher.rs  wikilink.rs
src/ui/: file_tree.rs  mod.rs  preview.rs
