[package]
name = "mdr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[dependencies.ratatui]
version = "0.30"

[dependencies.crossterm]
version = "0.29"
