[package]
name = "mdr"
version = "0.1.3"
edition = "2024"
description = "A terminal markdown reader with vi-style keybindings."
license = "MIT OR Apache-2.0"
repository = "https://github.com/iyunbo/mdr"
readme = "README.md"
keywords = ["markdown", "tui", "ratatui", "viewer", "cli"]
categories = ["command-line-utilities"]

[profile.release]
lto = "thin"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[dependencies.ratatui]
version = "0.30"

[dependencies.crossterm]
version = "0.29"
