[package]
name = "mdr"
version = "0.4.5"
edition = "2024"
description = "A terminal markdown reader with vi-style keybindings."
license = "MIT OR Apache-2.0"
repository = "https://github.com/iyunbo/mdr"
readme = "README.md"
keywords = ["markdown", "tui", "ratatui", "viewer", "cli"]
categories = ["command-line-utilities"]

[profile.release]
lto = "thin"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[dependencies.ratatui]
version = "0.30"

[dependencies.crossterm]
version = "0.29"

[dependencies.ratatui-image]
version = "11.0.0-alpha.2"
default-features = false
features = ["crossterm", "image-defaults"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg", "gif", "webp"]
